# f1tenth_verification

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
launch/: camera.launch  collision_verification_node.launch  manual_control.launch  object_tracking_node.launch  old_verification_node.launch  on_start.launch  visualize_verification.launch
scripts/StarV/util/: plot.py
scripts/verification/collision_verification/: collision_predicate.py  collision_probability.py  collision_probability_modifications.py  collision_verification_constants.py  collision_verification_ros_node.py  fast_pool.py  initial_state.py  kinematic_bicycle_antiderivative.py  model_reachability.py  probstar.py  test_real_world_cases.py  test_timing.py  transform_odometry_input.py  transform_perception_input.py
scripts/verification/collision_verification_plotter/: density_plot_recorder.py  different_braking_forces_prob_collision_recorder.py  different_steering_angle_prob_collision_recorder.py  different_velocity_prob_collision_recorder.py  general_legend.py  ground_truth_position_recorder.py  live_bounding_box_recorder.py  live_probability_of_collision_recorder.py  live_probstar_projection_recorder.py  live_semantic_segmentation_recorder.py  old_live_probability_of_collision_recorder.py  path_prediction_comparison.py  possible_collision_area_recorder.py  predicted_collision_area_recorder.py  vicon_model_diff.py
scripts/verification/manual_control/: manual_control.py  manual_control_constants.py  manual_control_old.py
scripts/verification/object_tracking_node/: backup_object_tracking.txt  constants.py  image_processing.py  object_tracking_node.py  utils.py
scripts/verification/real_bounding_box/: bounding_box_recorder.py  constants.py  display_pose.py  pose_recorder.py
scripts/verification/test/: 3d_constraint.py  3d_danger_area.py  3d_danger_area_top_down.py  3d_danger_area_x_y_flop.py  density_plot_few_frames.py  different_braking_forces.py  different_steering_angles.py  prob_collision_surface_plot.py  test.py  test_3d_graph.py  test_3d_polygon.py
scripts/verification/velocity_test/: velocity.py
scripts/verification/verification_node/: calculations.py  half_space_linear_constraints.py  verification_constants.py  verification_node.py  verification_node_backup.txt  verification_node_timer.py
scripts/verification/verification_plotter/: all_together.py  bounding_box_plotter.py  constraint_plotter.py  live_prob_plotter.py  old_live_prob_plotter.py  prob_plotter_with_pose.py  probability_recorder.py  semantic_segmentation.py  simple_display_plot.py  video.py
